Closed Bug 154932 Opened 23 years ago Closed 23 years ago

Mozilla will not start on MacOS 8.6 if filesharing is on

Categories

(Core :: XPCOM, defect)

PowerPC
Mac System 8.6
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla1.1beta

People

(Reporter: mozeditor, Assigned: mozeditor)

References

Details

(Whiteboard: fixinhand [adt2 RTM] [ETA 07/11])

Attachments

(1 file)

First reported in bug 4201, quoted below: ------ Additional Comment #39 From Bob Reite 2002-06-24 23:41 ------- Ver 1.1a will hang on startup on my machine (Biege G3, >50meg unused memory) if file sharing is enabled. Disable file sharing and this bug goes away. ------- Additional Comment #40 From Bob Reite 2002-06-24 23:43 ------- Followup to #39. OS is 8.6
Fixing how we create the FSSpec for the mozilla application directory.
keyword soup. This is an easy fix that lets us work on macos 8.6 again. Do we want it for the branch?
Status: NEW → ASSIGNED
Whiteboard: fixinhand
Target Milestone: --- → mozilla1.1beta
nsbeta1+
Keywords: nsbeta1nsbeta1+
Whiteboard: fixinhand → fixinhand [adt2]
Comment on attachment 89659 [details] [diff] [review] patch for nsDirectoryService.cpp >+ // create an FSSpec from the volume and dirid of the app. >+ FSSpec appFSSpec; >+ ::FSMakeFSSpec(pInfo.processAppSpec->vRefNum, pInfo.processAppSpec->parID, 0, &appFSSpec); > That's the way it should be done. r=ccarlen Nit - I'd rather you use nsnull instead of 0 as the 3rd param to FSMakeFSSpec.
Attachment #89659 - Flags: review+
Kevin asked me to assess risks. The only thing that can go wrong is that the fsspec call fails. If that happens at this point in the app, you're screwed. I didn't bother to check for the error because there was little point. As a practical matter it should never happen unless someone has a horked machine that needs rebooting anyway. Number of users affected will be a lot. It happens whenever filesharing is on, and a lot of users run with filesharing on with 8.6. If I had to guess I'd say 1/3rd of the 8.6 users, but that's just a guess. I should point out that there is a bug 143543 that also affects 8.6. sfraser has looked t that one. You may want to only take this one if you can get a fix for that one as well.
pls get sr= before nominating for adt1.0.1. thanks! is this bug dependent on bug 143543, or is it just a suggestion that we take the other bug (if fixed)?
Blocks: 143047
Keywords: adt1.0.1
Whiteboard: fixinhand [adt2] → fixinhand [adt2 RTM] [ETA 07/11]
We're currently looking into the feasibility of fixing 143543. Can you proceed with the reviews?
*** Bug 156208 has been marked as a duplicate of this bug. ***
Comment on attachment 89659 [details] [diff] [review] patch for nsDirectoryService.cpp sr=sfraser (on joe's machine)
Attachment #89659 - Flags: superreview+
sorry for delays here: bug owner was on vacation til now.
pls check this into the trunk asap. who can QA this one? scc is a driver, not QA, right?
Keywords: adt1.0.1
addimg sarah for qa
QA Contact: scc → sairuh
i'll check this later on today in the lab...
i guess this has not yet been checked into the trunk, since the 2002.07.15.08 comm trunk bits still crash on launch (when file sharing is on).
This fix has been checked into trunk on 7/15. Sarah, this is ready to verify on the trunk
still no go using 2002.07.16.08 trunk comm bits on OS 8.6. either this has still not been checked in (i don't think i see checkins to this effect by jfrancis or other macdev folx in the last 12-18hrs), or if it was, it's still broken.
looked at the tboxen again, and noticed that this was actually checked in on the branch (20:31 yesterday), not on the trunk. i'll grab a branch build and test there in a bit...
Keywords: fixed1.0.1
looks good --verified fixed on the branch using 2002.07.16.05-1.0 (comm branch) bits on OS 8.6. tested with both file sharing ON and OFF. could we check this into the trunk, please? thanks!
what drugs was i on and can i please have some more? I have landed on trunk now. I never had permisiion to go on branch. I'll leave it there though unless asked to remove it.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Marking adt1.0.1+. Checked into the branch by mistake.
Keywords: adt1.0.1adt1.0.1+
vrfy'd fixed on the TRUNK, using 2002.07.17.08 (trunk) commercial bits on OS 8.6.
Status: RESOLVED → VERIFIED
*** Bug 143454 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: