fix for Bug 154932: Mozilla will not start on MacOS 8.6 if filesharing is on.  Corrected the construction of an FSSpec in nsDirectoryService.cpp

r=ccarlen
sr=sfraser
a=jaime